# ELTR

./: .gitignore  CLAUDE.md  ELTR.py  IRP.py  README.md  code_structure.txt  directory_structure.txt  paper.tex  pyproject.toml
config/: default.yaml
data/kalshi/kalshi_data_pull_v2/: metadata.csv  schema_mapping.json
data/kalshi/kalshi_data_pull_v2/csv_output/Culture/: KXRTCAPTAINAMERICA-45.csv  KXRTCAPTAINAMERICA-50.csv  KXRTCAPTAINAMERICA-55.csv  KXRTCAPTAINAMERICA-60.csv  KXRTMINECRAFT-40.csv  KXRTMINECRAFT-45.csv  KXRTMINECRAFT-50.csv  KXRTMINECRAFT-55.csv  KXSBADS-25-AP.csv  KXSBADS-25-B.csv  KXSBADS-25-CB.csv  KXSBADS-25-CC.csv  KXSBADS-25-P.csv  KXSBADS-25-PR.csv  KXSBADS-25-SF.csv  KXSBADS-25-T.csv  KXSBADS-25-TM.csv  KXSBADS-25-V.csv  KXSUPERBOWLHEADLINE-26-ADE.csv  KXSUPERBOWLHEADLINE-26-BAD.csv  KXSUPERBOWLHEADLINE-26-TAY.csv
data/kalshi/kalshi_data_pull_v2/csv_output/Economics/: KXAAAGASM-25APR30-3.10.csv  KXAAAGASM-25APR30-3.15.csv  KXAAAGASM-25JUL31-3.10.csv  KXAAAGASM-25JUL31-3.15.csv  KXAAAGASM-25JUN30-3.20.csv  KXAAAGASM-25JUN30-3.25.csv  KXAAAGASM-25JUN30-3.30.csv  KXAAAGASM-25MAY31-3.10.csv  KXAAAGASM-25MAY31-3.20.csv  KXAAAGASM-25MAY31-3.25.csv  KXCPI-25APR-T0.1.csv  KXCPI-25APR-T0.2.csv  KXCPI-25APR-T0.3.csv  KXCPI-25AUG-T0.2.csv  KXCPI-25AUG-T0.3.csv  KXCPI-25JUL-T0.1.csv  KXCPI-25JUL-T0.2.csv  KXCPI-25JUL-T0.3.csv  KXCPI-25JUN-T0.1.csv  KXCPI-25JUN-T0.2.csv  KXCPI-25JUN-T0.3.csv  KXCPI-25MAY-T0.0.csv  KXCPI-25MAY-T0.1.csv  KXCPI-25MAY-T0.2.csv  KXCPI-25SEP-T0.3.csv  (+24 more)
final_tables/: category_summary.csv  regime_transitions.csv
output/tables/: cleaning_stats.csv  contract_summary.csv  contract_summary_extended.csv  lifecycle_binned_metrics.csv  microstructure_summary.csv
scripts/: generate_lifecycle_figure.py  robustness_analysis.py
src/: __init__.py
src/clean/: __init__.py  cleaner.py
src/features/: __init__.py  feature_engineering.py
src/ingest/: __init__.py  kalshi_loader.py
src/microstructure/: __init__.py  analysis.py  analysis_original.py  bursts.py  event_alignment.py  lifecycle.py  liquidity.py  regimes.py  spread.py
src/plots/: __init__.py  plotting.py
src/utils/: __init__.py  config.py  export.py  logging.py  normalization.py  time_binning.py  types.py
tests/: __init__.py  conftest.py  test_clean.py  test_edge_cases.py  test_features.py  test_ingest.py  test_integration.py
(+200 files in other folders)
